Transferred from the Adobe Open Source Subversion Repository
Revision: 3711
Author:   mhorn@adobe.com
Date:     2008-10-17T17:55:26.712310Z

Log Message: 
-----------
asdoc updates; fix examples; add new examples

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/LineExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/ArrowExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/BitmapGraphicExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/EllipseExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/RectExample.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/TextBoxExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/graphics/TextBox.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/CircleExample.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/TextGraphicExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/graphics/TextGraphic.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/TextView.as</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275358 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/primitives/examples/EllipseExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/primitives/examples/EllipseExample.mxml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- EllipseExample.mxml -->
-<mx:Application
-     xmlns:mx="library:adobe/flex/halo"
-     xmlns="http://ns.adobe.com/mxml/2009">
-
-     <mx:Canvas top="0" bottom="0" left="0" right="0">
+<Application xmlns="http://ns.adobe.com/mxml/2009">
+     <Canvas top="0" bottom="0" left="0" right="0">
           <Graphic x="0" y="0">
                    <Ellipse height="100" width="250">
                          <stroke>
@@ -21,5 +18,5 @@
                        </fill>
                    </Ellipse>
            </Graphic>
-     </mx:Canvas>
-</mx:Application>
+     </Canvas>
+</Application>
