--- a/projects/spark/asdoc/en_US/spark/primitives/examples/LineExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/primitives/examples/LineExample.mxml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- LineExample.mxml -->
-<mx:Application
-     xmlns:mx="library:adobe/flex/halo"
-     xmlns="http://ns.adobe.com/mxml/2009">
-
-     <mx:Canvas top="0" bottom="0" left="0" right="0">
+<Application xmlns="http://ns.adobe.com/mxml/2009">
+     <Canvas top="0" bottom="0" left="0" right="0">
           <Graphic x="0" y="0">
               <Line xFrom="0" xTo="0" yFrom="0" yTo="100">
                     <!-- Define the border color of the line. -->
@@ -53,5 +50,5 @@
                     </stroke>
               </Line>
            </Graphic>
-     </mx:Canvas>
-</mx:Application>
+     </Canvas>
+</Application>
