--- a/projects/spark/asdoc/en_US/spark/primitives/examples/LineExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/primitives/examples/LineExample.mxml
@@ -1,58 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- LineExample.mxml -->
-<Application xmlns="http://ns.adobe.com/mxml/2009">
-     <Panel title="Line Graphic Example"
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
+     <s:Panel title="Line Graphic Example"
         height="75%" width="75%" layout="horizontal"
         paddingTop="10" paddingBottom="10" paddingLeft="10" paddingRight="10">
           <Canvas top="0" bottom="0" left="0" right="0">
-               <Graphic x="0" y="0">
-                   <Line xFrom="0" xTo="0" yFrom="0" yTo="100">
+               <s:Graphic x="0" y="0">
+                   <s:Line xFrom="0" xTo="0" yFrom="0" yTo="100">
                          <!-- Define the border color of the line. -->
-                         <stroke>
-                              <Stroke color="0x000000" weight="1" joints="miter"/>
-                         </stroke>
-                   </Line>
-                   <Line xFrom="6" xTo="6" yFrom="0" yTo="100">
-                         <stroke>
-                              <Stroke color="0x000000" weight="1" joints="miter"/>
-                         </stroke>
-                   </Line>
-                   <Line xFrom="12" xTo="12" yFrom="0" yTo="100">
-                         <stroke>
-                              <Stroke color="0x000000" weight="2" joints="miter"/>
-                         </stroke>
-                   </Line>
-                   <Line xFrom="20" xTo="20" yFrom="0" yTo="100">
-                         <stroke>
-                              <Stroke color="0x000000" weight="3" joints="miter"/>
-                         </stroke>
-                   </Line>
-                   <Line xFrom="30" xTo="30" yFrom="0" yTo="100">
-                         <stroke>
-                              <Stroke color="0x000000" weight="5" joints="miter"/>
-                         </stroke>
-                   </Line>
-                   <Line xFrom="43" xTo="43" yFrom="0" yTo="100">
-                         <stroke>
-                              <Stroke color="0x000000" weight="8" joints="miter"/>
-                         </stroke>
-                   </Line>
-                   <Line xFrom="58" xTo="58" yFrom="0" yTo="100">
-                         <stroke>
-                              <Stroke color="0x000000" weight="13" joints="miter"/>
-                         </stroke>
-                   </Line>
-                   <Line xFrom="84" xTo="84" yFrom="0" yTo="100">
-                         <stroke>
-                              <Stroke color="0x000000" weight="21" joints="miter"/>
-                         </stroke>
-                   </Line>
-                   <Line xFrom="123" xTo="123" yFrom="0" yTo="100">
-                         <stroke>
-                              <Stroke color="0x000000" weight="34" joints="miter"/>
-                         </stroke>
-                   </Line>
-                </Graphic>
+                         <s:stroke>
+                              <s:Stroke color="0x000000" weight="1" joints="miter"/>
+                         </s:stroke>
+                   </s:Line>
+                   <s:Line xFrom="6" xTo="6" yFrom="0" yTo="100">
+                         <s:stroke>
+                              <s:Stroke color="0x000000" weight="1" joints="miter"/>
+                         </s:stroke>
+                   </s:Line>
+                   <s:Line xFrom="12" xTo="12" yFrom="0" yTo="100">
+                         <s:stroke>
+                              <s:Stroke color="0x000000" weight="2" joints="miter"/>
+                         </s:stroke>
+                   </s:Line>
+                   <s:Line xFrom="20" xTo="20" yFrom="0" yTo="100">
+                         <s:stroke>
+                              <s:Stroke color="0x000000" weight="3" joints="miter"/>
+                         </s:stroke>
+                   </s:Line>
+                   <s:Line xFrom="30" xTo="30" yFrom="0" yTo="100">
+                         <s:stroke>
+                              <s:Stroke color="0x000000" weight="5" joints="miter"/>
+                         </s:stroke>
+                   </s:Line>
+                   <s:Line xFrom="43" xTo="43" yFrom="0" yTo="100">
+                         <s:stroke>
+                              <s:Stroke color="0x000000" weight="8" joints="miter"/>
+                         </s:stroke>
+                   </s:Line>
+                   <s:Line xFrom="58" xTo="58" yFrom="0" yTo="100">
+                         <s:stroke>
+                              <s:Stroke color="0x000000" weight="13" joints="miter"/>
+                         </s:stroke>
+                   </s:Line>
+                   <s:Line xFrom="84" xTo="84" yFrom="0" yTo="100">
+                         <s:stroke>
+                              <s:Stroke color="0x000000" weight="21" joints="miter"/>
+                         </s:stroke>
+                   </s:Line>
+                   <s:Line xFrom="123" xTo="123" yFrom="0" yTo="100">
+                         <s:stroke>
+                              <s:Stroke color="0x000000" weight="34" joints="miter"/>
+                         </s:stroke>
+                   </s:Line>
+                </s:Graphic>
           </Canvas>
-     </Panel>
-</Application>
+     </s:Panel>
+</s:Application>
