--- a/projects/spark/asdoc/en_US/spark/primitives/examples/LineExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/primitives/examples/LineExample.mxml
@@ -1,64 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- LineExample.mxml -->
-<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
+<!-- examples/LineExample.mxml -->
+<s:Application 
+    xmlns:fx="http://ns.adobe.com/mxml/2009" 
+    xmlns:mx="library://ns.adobe.com/flex/mx" 
+    xmlns:s="library://ns.adobe.com/flex/spark">
 
-    <s:Panel title="Line Graphic Example"
-            width="75%" height="75%"
-            horizontalCenter="0" verticalCenter="0">
-        <s:Line xFrom="0" xTo="0" yFrom="0" yTo="100">
-            <!-- Define the border color of the line. -->
-            <s:stroke>
-                <s:SolidColorStroke color="0x000000" weight="1" joints="miter"/>
-            </s:stroke>
-        </s:Line>
+     <mx:Panel title="Line MXML Graphic Example"
+        height="75%" width="75%" layout="horizontal"
+        paddingTop="30" paddingBottom="10" paddingLeft="10" paddingRight="10">
 
-        <s:Line xFrom="6" xTo="6" yFrom="0" yTo="100">
-            <s:stroke>
-                <s:SolidColorStroke color="0x000000" weight="1" joints="miter"/>
-            </s:stroke>
-        </s:Line>
+        <s:Group x="20" y="20">
+            <s:Line xFrom="0" xTo="0" yFrom="0" yTo="100">
+                 <!-- Define the border color of the line. -->
+                 <s:stroke>
+                      <s:SolidColorStroke color="0x000000" weight="1" caps="square"/>
+                 </s:stroke>
+            </s:Line>
+            <s:Line xFrom="6" xTo="6" yFrom="0" yTo="100">
+                 <s:stroke>
+                      <s:SolidColorStroke color="0x000000" weight="1" caps="square"/>
+                 </s:stroke>
+            </s:Line>
+            <s:Line xFrom="12" xTo="12" yFrom="0" yTo="100">
+                 <s:stroke>
+                      <s:SolidColorStroke color="0x000000" weight="2" caps="square"/>
+                 </s:stroke>
+            </s:Line>
+            <s:Line xFrom="20" xTo="20" yFrom="0" yTo="100">
+                 <s:stroke>
+                      <s:SolidColorStroke color="0x000000" weight="3" caps="square"/>
+                 </s:stroke>
+            </s:Line>
+            <s:Line xFrom="30" xTo="30" yFrom="0" yTo="100">
+                 <s:stroke>
+                      <s:SolidColorStroke color="0x000000" weight="5" caps="square"/>
+                 </s:stroke>
+            </s:Line>
+            <s:Line xFrom="43" xTo="43" yFrom="0" yTo="100">
+                 <s:stroke>
+                      <s:SolidColorStroke color="0x000000" weight="8" caps="square"/>
+                 </s:stroke>
+            </s:Line>
+            <s:Line xFrom="58" xTo="58" yFrom="0" yTo="100">
+                 <s:stroke>
+                      <s:SolidColorStroke color="0x000000" weight="13" caps="square"/>
+                 </s:stroke>
+            </s:Line>
+            <s:Line xFrom="84" xTo="84" yFrom="0" yTo="100">
+                 <s:stroke>
+                      <s:SolidColorStroke color="0x000000" weight="21" caps="square"/>
+                 </s:stroke>
+            </s:Line>
+            <s:Line xFrom="123" xTo="123" yFrom="0" yTo="100">
+                 <s:stroke>
+                      <s:SolidColorStroke color="0x000000" weight="34" caps="square"/>
+                 </s:stroke>
+            </s:Line>
 
-        <s:Line xFrom="12" xTo="12" yFrom="0" yTo="100">
-            <s:stroke>
-                <s:SolidColorStroke color="0x000000" weight="2" joints="miter"/>
-            </s:stroke>
-        </s:Line>
+        </s:Group>
 
-        <s:Line xFrom="20" xTo="20" yFrom="0" yTo="100">
-            <s:stroke>
-                <s:SolidColorStroke color="0x000000" weight="3" joints="miter"/>
-            </s:stroke>
-        </s:Line>
-
-        <s:Line xFrom="30" xTo="30" yFrom="0" yTo="100">
-            <s:stroke>
-                <s:SolidColorStroke color="0x000000" weight="5" joints="miter"/>
-            </s:stroke>
-        </s:Line>
-
-        <s:Line xFrom="43" xTo="43" yFrom="0" yTo="100">
-            <s:stroke>
-                <s:SolidColorStroke color="0x000000" weight="8" joints="miter"/>
-            </s:stroke>
-        </s:Line>
-
-        <s:Line xFrom="58" xTo="58" yFrom="0" yTo="100">
-            <s:stroke>
-                <s:SolidColorStroke color="0x000000" weight="13" joints="miter"/>
-            </s:stroke>
-        </s:Line>
-
-        <s:Line xFrom="84" xTo="84" yFrom="0" yTo="100">
-            <s:stroke>
-                <s:SolidColorStroke color="0x000000" weight="21" joints="miter"/>
-            </s:stroke>
-        </s:Line>
-
-        <s:Line xFrom="123" xTo="123" yFrom="0" yTo="100">
-            <s:stroke>
-                <s:SolidColorStroke color="0x000000" weight="34" joints="miter"/>
-            </s:stroke>
-        </s:Line>
-    </s:Panel>
-
+     </mx:Panel>
 </s:Application>
