--- a/projects/spark/asdoc/en_US/spark/primitives/examples/RectExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/primitives/examples/RectExample.mxml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- EllipseExample.mxml -->
-<mx:Application
-     xmlns:mx="library:adobe/flex/halo"
-     xmlns="http://ns.adobe.com/mxml/2009">
-
-     <mx:Canvas top="0" bottom="0" left="0" right="0">
+<Application xmlns="http://ns.adobe.com/mxml/2009">
+     <Canvas top="0" bottom="0" left="0" right="0">
           <Graphic x="0" y="0">
                <!-- Draw rectangle with square corners. -->
               <Rect height="100" width="200">                              
@@ -39,5 +36,5 @@
                     </fill>
               </Rect>
           </Graphic>
-     </mx:Canvas>
-</mx:Application>
+     </Canvas>
+</Application>
