Transferred from the Adobe Open Source Subversion Repository
Revision: 3910
Author:   mhorn@adobe.com
Date:     2008-10-27T19:44:27.802565Z

Log Message: 
-----------
update examples so they are Examples Explorer-friendly

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/LineExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/ArrowExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/BitmapGraphicExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/EllipseExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/RectExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/TextBoxExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/CircleExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/graphics/examples/TextGraphicExample.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275376 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/primitives/examples/RectExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/primitives/examples/RectExample.mxml
@@ -1,40 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- EllipseExample.mxml -->
+<!-- RectExample.mxml -->
 <Application xmlns="http://ns.adobe.com/mxml/2009">
-     <Canvas top="0" bottom="0" left="0" right="0">
-          <Graphic x="0" y="0">
-               <!-- Draw rectangle with square corners. -->
-              <Rect height="100" width="200">                              
-                    <stroke>
-                         <Stroke color="0x000000" weight="2"/>
-                    </stroke>
-                    <fill>
-                         <RadialGradient>
-                              <entries>
-                                   <GradientEntry color="0x0056FF" ratio="0" alpha=".5"/>
-                                   <GradientEntry color="0x00CC99" ratio=".33" alpha=".5"/>
-                                   <GradientEntry color="0xECEC21" ratio=".66" alpha=".5"/>
-                              </entries>
-                         </RadialGradient>
-                    </fill>
-              </Rect>
-           </Graphic>
-          <Graphic x="250" y="0">
-               <!-- Draw rectangle with rounded corners. -->
-              <Rect height="100" width="200" radiusX="25" radiusY="25">                              
-                    <stroke>
-                         <Stroke color="0x000000" weight="2"/>
-                    </stroke>
-                    <fill>
-                         <RadialGradient>
-                              <entries>
-                                   <GradientEntry color="0x0056FF" ratio="0" alpha=".5"/>
-                                   <GradientEntry color="0x00CC99" ratio=".33" alpha=".5"/>
-                                   <GradientEntry color="0xECEC21" ratio=".66" alpha=".5"/>
-                              </entries>
-                         </RadialGradient>
-                    </fill>
-              </Rect>
-          </Graphic>
-     </Canvas>
+     <Panel title="Rectangle Graphic Example"
+        height="75%" width="75%" layout="horizontal"
+        paddingTop="10" paddingBottom="10" paddingLeft="10" paddingRight="10">
+          <Canvas top="0" bottom="0" left="0" right="0">
+               <Graphic x="0" y="0">
+                    <!-- Draw rectangle with square corners. -->
+                   <Rect height="100" width="200">                              
+                         <stroke>
+                              <Stroke color="0x000000" weight="2"/>
+                         </stroke>
+                         <fill>
+                              <RadialGradient>
+                                   <entries>
+                                        <GradientEntry color="0x0056FF" ratio="0" alpha=".5"/>
+                                        <GradientEntry color="0x00CC99" ratio=".33" alpha=".5"/>
+                                        <GradientEntry color="0xECEC21" ratio=".66" alpha=".5"/>
+                                   </entries>
+                              </RadialGradient>
+                         </fill>
+                   </Rect>
+                </Graphic>
+               <Graphic x="250" y="0">
+                    <!-- Draw rectangle with rounded corners. -->
+                   <Rect height="100" width="200" radiusX="25" radiusY="25">                              
+                         <stroke>
+                              <Stroke color="0x000000" weight="2"/>
+                         </stroke>
+                         <fill>
+                              <RadialGradient>
+                                   <entries>
+                                        <GradientEntry color="0x0056FF" ratio="0" alpha=".5"/>
+                                        <GradientEntry color="0x00CC99" ratio=".33" alpha=".5"/>
+                                        <GradientEntry color="0xECEC21" ratio=".66" alpha=".5"/>
+                                   </entries>
+                              </RadialGradient>
+                         </fill>
+                   </Rect>
+               </Graphic>
+          </Canvas>
+     </Panel>
 </Application>
