--- a/projects/spark/asdoc/en_US/spark/primitives/examples/RectExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/primitives/examples/RectExample.mxml
@@ -1,44 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- RectExample.mxml -->
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
-     <s:Panel title="Rectangle Graphic Example"
-        height="75%" width="75%" layout="horizontal"
-        paddingTop="10" paddingBottom="10" paddingLeft="10" paddingRight="10">
-          <Canvas top="0" bottom="0" left="0" right="0">
-               <s:Graphic x="0" y="0">
-                    <!-- Draw rectangle with square corners. -->
-                   <s:Rect height="100" width="200">                              
-                         <s:stroke>
-                              <s:Stroke color="0x000000" weight="2"/>
-                         </s:stroke>
-                         <s:fill>
-                              <s:RadialGradient>
-                                   <entries>
-                                        <s:GradientEntry color="0x0056FF" ratio="0" alpha=".5"/>
-                                        <s:GradientEntry color="0x00CC99" ratio=".33" alpha=".5"/>
-                                        <s:GradientEntry color="0xECEC21" ratio=".66" alpha=".5"/>
-                                   </entries>
-                              </s:RadialGradient>
-                         </s:fill>
-                   </s:Rect>
-                </s:Graphic>
-               <s:Graphic x="250" y="0">
-                    <!-- Draw rectangle with rounded corners. -->
-                   <s:Rect height="100" width="200" radiusX="25" radiusY="25">                              
-                         <s:stroke>
-                              <s:Stroke color="0x000000" weight="2"/>
-                         </s:stroke>
-                         <s:fill>
-                              <s:RadialGradient>
-                                   <entries>
-                                        <s:GradientEntry color="0x0056FF" ratio="0" alpha=".5"/>
-                                        <s:GradientEntry color="0x00CC99" ratio=".33" alpha=".5"/>
-                                        <s:GradientEntry color="0xECEC21" ratio=".66" alpha=".5"/>
-                                   </entries>
-                              </s:RadialGradient>
-                         </s:fill>
-                   </s:Rect>
-               </s:Graphic>
-          </Canvas>
-     </s:Panel>
+
+    <s:Panel title="Rectangle Graphic Example"
+            width="75%" height="75%"
+            horizontalCenter="0" verticalCenter="0">
+        <s:Group left="10" right="10" top="10" bottom="10">
+            <s:Graphic x="0" y="0">
+                <!-- Draw rectangle with square corners. -->
+                <s:Rect height="100" width="200">
+                    <s:stroke>
+                        <s:SolidColorStroke color="0x000000" weight="2"/>
+                    </s:stroke>
+                    <s:fill>
+                        <s:RadialGradient>
+                            <s:entries>
+                                <s:GradientEntry color="0x0056FF" ratio="0.00" alpha="0.5"/>
+                                <s:GradientEntry color="0x00CC99" ratio="0.33" alpha="0.5"/>
+                                <s:GradientEntry color="0xECEC21" ratio="0.66" alpha="0.5"/>
+                            </s:entries>
+                        </s:RadialGradient>
+                    </s:fill>
+                </s:Rect>
+            </s:Graphic>
+
+            <s:Graphic x="250" y="0">
+                <!-- Draw rectangle with rounded corners. -->
+                <s:Rect height="100" width="200" radiusX="25" radiusY="25">
+                    <s:stroke>
+                        <s:SolidColorStroke color="0x000000" weight="2"/>
+                    </s:stroke>
+                    <s:fill>
+                        <s:RadialGradient>
+                            <s:entries>
+                                <s:GradientEntry color="0x0056FF" ratio="0.00" alpha="0.5"/>
+                                <s:GradientEntry color="0x00CC99" ratio="0.33" alpha="0.5"/>
+                                <s:GradientEntry color="0xECEC21" ratio="0.66" alpha="0.5"/>
+                            </s:entries>
+                        </s:RadialGradient>
+                    </s:fill>
+                </s:Rect>
+            </s:Graphic>
+        </s:Group>
+    </s:Panel>
+
 </s:Application>
