--- a/projects/spark/asdoc/en_US/spark/skins/spark/examples/DefaultGridItemRendererExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/skins/spark/examples/DefaultGridItemRendererExample.mxml
@@ -70,11 +70,16 @@ reasonable column width.
             
             <!--
                 The typicalItem defines column widths and the default row height.  The text
-                occpies three lines because we've used the odd XML '&#10;' escape to introduce 
+                occpies three lines because we've used data binding to introduce two
+                newlines.
+            
+                Alternatively, we could have used the odd XML '&amp;#10;' escape to introduce 
                 two newlines (the value of the newline character is decimal 10).
+            
+                <s:DataItem value="Lorem Ipsum sample text.&amp;#10;newline&amp;#10;"/>
             -->
             <s:typicalItem>
-                <s:DataItem value="Lorem Ipsum sample text.&#10;newline&#10;"/>
+                <s:DataItem value="{'Lorem Ipsum sample text.\nnewline\n'}"/>
             </s:typicalItem>
             
             <s:ArrayCollection>
