Transferred from the Adobe Open Source Subversion Repository
Revision: 20730
Author:   cframpto@adobe.com
Date:     2011-03-09T20:27:26.668138Z

Log Message: 
-----------
Merge 20714 and 20715 from hero_private to private trunk.

Revision: 20714
Exclude all text styles that do not have an effect on either UIFTETextField or FTETextField.  Some of the styles are hard-coded by FTETextField.  Some of the styles aren't suportted because, even though FTE supports them, they aren't in the TextField interface.

Revision: 20715
More changes to get these examples to layout correctly in ASdoc.

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/DataGridMasterDetailExample.mxml</path>
<path kind="file" action="M">/private/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/skins/spark/examples/DefaultGridItemRendererExample.mxml</path>
<path kind="file" action="M">/private/flex/sdk/trunk/frameworks/projects/spark/src/spark/skins/spark/DefaultGridItemRenderer.as</path>
<path kind="dir" action="M">/private/flex/sdk/trunk</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275383 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/skins/spark/examples/DefaultGridItemRendererExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/skins/spark/examples/DefaultGridItemRendererExample.mxml
@@ -37,13 +37,13 @@ reasonable column width.
         <s:controlBarContent>
             <s:VGroup>
                 <s:CheckBox id="vrh" selected="@{dataGrid.variableRowHeight}" 
-                    label="dataGrid.variableRowHeight={vrh.selected}"/>            
+                            label="dataGrid.variableRowHeight={vrh.selected}"/>            
                 <s:CheckBox id="wordWrapCheckBox" selected="true" 
-                    label="defaultRenderer.wordWrap={wordWrapCheckBox.selected}"/>
+                            label="defaultRenderer.wordWrap={wordWrapCheckBox.selected}"/>
             </s:VGroup>
         </s:controlBarContent>
-    
-        <s:DataGrid id="dataGrid" variableRowHeight="false" verticalCenter="0" horizontalCenter="0">
+        
+        <s:DataGrid id="dataGrid" variableRowHeight="false" left="5" right="5" top="5" bottom="5">
             <s:columns>
                 <s:ArrayList>
                     <!--
@@ -69,14 +69,14 @@ reasonable column width.
             </s:columns>
             
             <!--
-                The typicalItem defines column widths and the default row height.  The text
-                occpies three lines because we've used data binding to introduce two
-                newlines.
+            The typicalItem defines column widths and the default row height.  The text
+            occpies three lines because we've used data binding to introduce two
+            newlines.
             
-                Alternatively, we could have used the odd XML '&amp;#10;' escape to introduce 
-                two newlines (the value of the newline character is decimal 10).
+            Alternatively, we could have used the odd XML '&amp;#10;' escape to introduce 
+            two newlines (the value of the newline character is decimal 10).
             
-                <s:DataItem value="Lorem Ipsum sample text.&amp;#10;newline&amp;#10;"/>
+            <s:DataItem value="Lorem Ipsum sample text.&amp;#10;newline&amp;#10;"/>
             -->
             <s:typicalItem>
                 <s:DataItem value="{'Lorem Ipsum sample text.\nnewline\n'}"/>
