Transferred from the Adobe Open Source Subversion Repository
Revision: 5580
Author:   tan@adobe.com
Date:     2009-03-26T18:21:26.011611Z

Log Message: 
-----------
Updating Advanced CSS samples and CheckBoxExample for ASDoc.

Modified Paths:
--------------
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/components/examples/FxCheckBoxExample.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/components/examples/CheckBoxExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/TypeClassSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/DescendantSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/IDSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/PseudoSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/DateStateComp.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275387 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/styles/examples/DateStateComp.mxml
+++ b/projects/spark/asdoc/en_US/spark/styles/examples/DateStateComp.mxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Box xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" currentState="normal">
-    <s:states>
-        <s:State name="normal" />
-        <s:State name="zoomed" />
-    </s:states>
-    <s:transitions>
-    	<s:Transition fromState="*" toState="*">
-    		<s:Resize duration="1000" target="{date1}" />
-    	</s:Transition>
-    </s:transitions>
-	<DateChooser id="date1" />
+<mx:Box xmlns:s="library://ns.adobe.com/flex/spark" xmlns:fx="http://ns.adobe.com/mxml/2009"
+    xmlns:mx="library://ns.adobe.com/flex/halo" currentState="normal">
+    <mx:states>
+        <mx:State name="normal" />
+        <mx:State name="zoomed" />
+    </mx:states>
+    <mx:transitions>
+    	<mx:Transition fromState="*" toState="*">
+    		<mx:Resize duration="1000" target="{date1}" />
+    	</mx:Transition>
+    </mx:transitions>
+	<mx:DateChooser id="date1" />
 
-</Box>
+</mx:Box>
