--- a/projects/spark/asdoc/en_US/spark/styles/examples/DescendantSelectorExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/styles/examples/DescendantSelectorExample.mxml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <!-- Simple example to demonstrate the descendant selectors
    in both Spark and Halo components. -->
-<FxApplication xmlns="http://ns.adobe.com/mxml/2009">
-     <Style>
+<FxApplication xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
+     <fx:Style>
         FxButtonBar FxToggleButton:upAndSelected,
         FxButtonBar FxToggleButton:overAndSelected,
         FxButtonBar FxToggleButton:downAndSelected,
@@ -18,7 +18,7 @@
         VBox Text {
             fontWeight: "bold";
         }
-    </Style>
+    </fx:Style>
 
     <FxPanel title="Advanced CSS: Descendant Selector Example" height="75%" width="75%" >
 
