--- a/projects/spark/asdoc/en_US/spark/styles/examples/DescendantSelectorExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/styles/examples/DescendantSelectorExample.mxml
@@ -1,38 +1,42 @@
 <?xml version="1.0"?>
 <!-- Simple example to demonstrate the descendant selectors
    in both Spark and Halo components. -->
-<FxApplication xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
+    xmlns:mx="library://ns.adobe.com/flex/halo">
      <fx:Style>
-        FxButtonBar FxToggleButton:upAndSelected,
-        FxButtonBar FxToggleButton:overAndSelected,
-        FxButtonBar FxToggleButton:downAndSelected,
-        FxButtonBar FxToggleButton:disabledAndSelected {
+        @namespace s "library://ns.adobe.com/flex/spark";
+	    @namespace mx "library://ns.adobe.com/flex/halo";
+
+        s|ButtonBar s|ToggleButton:upAndSelected,
+        s|ButtonBar s|ToggleButton:overAndSelected,
+        s|ButtonBar s|ToggleButton:downAndSelected,
+        s|ButtonBar s|ToggleButton:disabledAndSelected {
             baseColor: #FF6633;
             color: #FFFFCC;
         }
 
-        FxButtonBar {
+        s|ButtonBar {
             baseColor: #FFFFCC;
         }
 
-        VBox Text {
+        mx|VBox mx|Text {
             fontWeight: "bold";
         }
     </fx:Style>
 
-    <FxPanel title="Advanced CSS: Descendant Selector Example" height="75%" width="75%" >
+    <s:Panel title="Advanced CSS: Descendant Selector Example" height="75%" width="75%" >
 
-    <FxButtonBar id="viewMenu" requiresSelection="true" x="10" y="10">
-        <dataProvider>
-            <ArrayCollection source="['Home', 'Events', 'Rooms', 'Dining']" />
-        </dataProvider>
-    </FxButtonBar>
+    <s:ButtonBar id="viewMenu" requiresSelection="true" x="10" y="10">
+        <s:dataProvider>
+            <mx:ArrayCollection source="['Home', 'Events', 'Rooms', 'Dining']" />
+        </s:dataProvider>
+    </s:ButtonBar>
 
-    <Text x="10" y="60" text="Only text in the VBox below has bold content." />
-    <VBox x="10" y="80">
-    	<Text text="Featured Content" fontSize="15" />
-    	<Text text="From holding onto depleted assets to delaying Social Security, these ..." />
-    </VBox>
+    <mx:Text x="10" y="60" text="Only text in the VBox below has bold content." />
+    <mx:VBox x="10" y="80">
+    	<mx:Text text="Featured Content" fontSize="15" />
+    	<mx:Text text="From holding onto depleted assets to delaying Social Security, these ..." />
+    </mx:VBox>
 
-    </FxPanel>
-</FxApplication>
+    </s:Panel>
+</s:Application>
