Transferred from the Adobe Open Source Subversion Repository
Revision: 7379
Author:   tan@adobe.com
Date:     2009-05-28T19:42:06.943190Z

Log Message: 
-----------
Update some CSS Selector examples :
1) Make some smaller to fit in Tour de Flex.
2) Change some Halo text components to use Spark SimpleText.
3) Center Panel containers vertically and horizontally.
4) Define a namespace in one of the Style blocks to get rid of a warning.

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/styles/examples/TypeClassSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/styles/examples/DescendantSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/styles/examples/IDSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/styles/examples/PseudoSelectorExample.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275393 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/styles/examples/DescendantSelectorExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/styles/examples/DescendantSelectorExample.mxml
@@ -24,7 +24,8 @@
         }
     </fx:Style>
 
-    <s:Panel title="Advanced CSS: Descendant Selector Example" height="75%" width="75%" >
+    <s:Panel title="Advanced CSS: Descendant Selector Example" height="75%" width="75%"
+        horizontalCenter="0" verticalCenter="0">
 
     <s:ButtonBar id="viewMenu" requiresSelection="true" x="10" y="10">
         <s:dataProvider>
@@ -32,7 +33,7 @@
         </s:dataProvider>
     </s:ButtonBar>
 
-    <mx:Text x="10" y="60" text="Only text in the VBox below has bold content." />
+    <s:SimpleText x="10" y="60" text="Only text in the VBox below has bold content." />
     <mx:VBox x="10" y="80">
     	<mx:Text text="Featured Content" fontSize="15" />
     	<mx:Text text="From holding onto depleted assets to delaying Social Security, these ..." />
