Transferred from the Adobe Open Source Subversion Repository
Revision: 7892
Author:   tan@adobe.com
Date:     2009-06-16T20:50:50.589813Z

Log Message: 
-----------
Updates to samples using ButtonBar after some name changes.

selectionChanged -> change
requiresSelection -> requireSelection

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/styles/examples/DescendantSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/components/examples/ButtonBarExample.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275394 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/styles/examples/DescendantSelectorExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/styles/examples/DescendantSelectorExample.mxml
@@ -27,7 +27,7 @@
     <s:Panel title="Advanced CSS: Descendant Selector Example" height="75%" width="75%"
         horizontalCenter="0" verticalCenter="0">
 
-    <s:ButtonBar id="viewMenu" requiresSelection="true" x="10" y="10">
+    <s:ButtonBar id="viewMenu" requireSelection="true" x="10" y="10">
         <s:dataProvider>
             <mx:ArrayCollection source="['Home', 'Events', 'Rooms', 'Dining']" />
         </s:dataProvider>
