Transferred from the Adobe Open Source Subversion Repository
Revision: 5580
Author:   tan@adobe.com
Date:     2009-03-26T18:21:26.011611Z

Log Message: 
-----------
Updating Advanced CSS samples and CheckBoxExample for ASDoc.

Modified Paths:
--------------
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/components/examples/FxCheckBoxExample.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/components/examples/CheckBoxExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/TypeClassSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/DescendantSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/IDSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/PseudoSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/DateStateComp.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275401 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/styles/examples/IDSelectorExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/styles/examples/IDSelectorExample.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <!-- Simple example to demonstrate the id selectors -->
-<FxApplication xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
+    xmlns:mx="library://ns.adobe.com/flex/halo">
      <fx:Style>
 
         #submitButton {
@@ -9,15 +10,15 @@
 
     </fx:Style>
 
-    <FxPanel title="Advanced CSS: ID Selector Example" height="75%" width="75%" >
-        <Label text="Only the FxButton below with the id 'submitButton' will have custom baseColor."
+    <s:Panel title="Advanced CSS: ID Selector Example" height="75%" width="75%" >
+        <mx:Label text="Only the Spark Button below with the id 'submitButton' will have custom baseColor."
         	x="10" y="10" />
-        <FxTextInput id="fileName" width="100" x="10" y="35"/>
-        <FxButton id="fileName_browse" label="browse" y="35" x="120"/>
-        <FxTextInput id="fileName2" width="100"  y="75" x="10"/>
-        <FxButton id="fileName2_browse" label="browse"  y="75" x="120"/>
+        <s:TextInput id="fileName" width="100" x="10" y="35"/>
+        <s:Button id="fileName_browse" label="browse" y="35" x="120"/>
+        <s:TextInput id="fileName2" width="100"  y="75" x="10"/>
+        <s:Button id="fileName2_browse" label="browse"  y="75" x="120"/>
 
-        <FxButton id="submitButton" label="Submit Form" x="10" y="130"/>
+        <s:Button id="submitButton" label="Submit Form" x="10" y="130"/>
 
-    </FxPanel>
-</FxApplication>
+    </s:Panel>
+</s:Application>
