--- a/projects/spark/asdoc/en_US/spark/styles/examples/IDSelectorExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/styles/examples/IDSelectorExample.mxml
@@ -10,8 +10,9 @@
 
     </fx:Style>
 
-    <s:Panel title="Advanced CSS: ID Selector Example" height="75%" width="75%" >
-        <mx:Label text="Only the Spark Button below with the id 'submitButton' will have custom baseColor."
+    <s:Panel title="Advanced CSS: ID Selector Example" height="75%" width="75%"
+        horizontalCenter="0" verticalCenter="0">
+        <s:SimpleText text="Only the Spark Button below with the id 'submitButton' will have custom baseColor."
         	x="10" y="10" />
         <s:TextInput id="fileName" width="100" x="10" y="35"/>
         <s:Button id="fileName_browse" label="browse" y="35" x="120"/>
