Transferred from the Adobe Open Source Subversion Repository
Revision: 9948
Author:   rfrishbe@adobe.com
Date:     2009-09-03T02:44:59.359824Z

Log Message: 
-----------
Spark Primitive Text Changes.  See http://opensource.adobe.com/wiki/display/flexsdk/Spark+Text+Primitives+Decision for the full information and reasoning for the decision.  The main changes are:

* Replace SimpleText with Label, a UIComponent version of the same component
* Instead of extending GraphicElement, RichText will extend UIComponent (like Label will)
* All of the spark text components will move to spark.components.*, so there will be spark.components.Label, spark.components.RichText, and spark.components.RichEditableText
* The base class for SimpleText and RichText, spark.primitives.supportClasses.TextGraphicElement, will now extend UIComponent (instead of GraphicElement) and be moved and renamed to spark.components.supportClasses.TextBase. All of our text skin parts will now be typed as TextBase instead of TextGraphicElement
* For now, RichEditableText and RichText will co-exist. Performance numbers showed that it may be possible to collapse them, but we don't have the time right now to do this. We will revisit this later on, time permitting.


QE notes: Jody and Brian have been helping out coordinate this change
Doc notes: I updated some ASDoc examples, but more work needs to be done here
Bugs: -
Reviewer: Gordon
Tests run: checkintests, Jody and Brian have been running tests
Is noteworthy for integration: Yes

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/wireframe/src/spark/skins/wireframe/ButtonBarFirstButtonSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/spark/components/DropDownList.as</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/compiler/fxg/FlexFXG2SWFTranscoder.java</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/src/sp

--- a/projects/spark/asdoc/en_US/spark/styles/examples/IDSelectorExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/styles/examples/IDSelectorExample.mxml
@@ -12,7 +12,7 @@
 
     <s:Panel title="Advanced CSS: ID Selector Example" height="75%" width="75%"
         horizontalCenter="0" verticalCenter="0">
-        <s:SimpleText text="Only the Spark Button below with the id 'submitButton' will have custom baseColor."
+        <s:Label text="Only the Spark Button below with the id 'submitButton' will have custom baseColor."
         	x="10" y="10" />
         <s:TextInput id="fileName" width="100" x="10" y="35"/>
         <s:Button id="fileName_browse" label="browse" y="35" x="120"/>
