Transferred from the Adobe Open Source Subversion Repository
Revision: 5545
Author:   jimurphy@adobe.com
Date:     2009-03-25T19:00:52.330680Z

Log Message: 
-----------
1st pass of rename according to the spec http://opensource.adobe.com/wiki/display/flexsdk/Dropping+the+Fx+Prefix

Flex now requires CSS Style declarations to declare @namespace rules and disambiguate between halo and spark components using CSS 3 namespace prefixes on type selectors. At compile time, this namespace information will be used to map type names to qualified ActionScript class names. At runtime, type selectors are matched on qualified ActionScript class name (for example mx.controls.Button rather than just Button). Flex 3 applications must be compiled with -compatibility-version=3.0.0 to get unqualified CSS type selector behavior.

QE: Yes, this build may help in updating test cases to use the new namespaces and class names.
Dev: Not yet
Doc: Not yet

Modified Paths:
--------------
748 paths were modified

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275408 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/styles/examples/PseudoSelectorExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/styles/examples/PseudoSelectorExample.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- Simple example to demonstrate the pseudo selectors -->
-<FxApplication xmlns="http://ns.adobe.com/mxml/2009" xmlns:custom="*">
-     <Style>
+<FxApplication xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" xmlns:custom="*">
+     <fx:Style>
         FxButton:up {
             baseColor: #000000;
             color: #FFFFFF;
@@ -28,8 +28,8 @@
 			color: #330066;
 		}
 
-    </Style>
-    <Script>
+    </fx:Style>
+    <fx:Script>
     	<![CDATA[
     	    private function changeCompState(): void
     	    {
@@ -43,7 +43,7 @@
     	        }
     	    }
     	]]>
-    </Script>
+    </fx:Script>
     <FxPanel title="Advanced CSS: Pseudo Selector Example" height="75%" width="75%" >
         <Label text="The FxButton below uses pseudo selectors to define its baseColor for each of its states."
         	x="10" y="10" />
