Transferred from the Adobe Open Source Subversion Repository
Revision: 5580
Author:   tan@adobe.com
Date:     2009-03-26T18:21:26.011611Z

Log Message: 
-----------
Updating Advanced CSS samples and CheckBoxExample for ASDoc.

Modified Paths:
--------------
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/components/examples/FxCheckBoxExample.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/components/examples/CheckBoxExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/TypeClassSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/DescendantSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/IDSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/PseudoSelectorExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/mx/styles/examples/DateStateComp.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275409 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/styles/examples/PseudoSelectorExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/styles/examples/PseudoSelectorExample.mxml
@@ -1,29 +1,32 @@
 <?xml version="1.0"?>
 <!-- Simple example to demonstrate the pseudo selectors -->
-<FxApplication xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" xmlns:custom="*">
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
+    xmlns:mx="library://ns.adobe.com/flex/halo" xmlns:custom="*">
      <fx:Style>
-        FxButton:up {
+        @namespace s "library://ns.adobe.com/flex/spark";
+        @namespace mx "library://ns.adobe.com/flex/halo";
+        s|Button:up {
             baseColor: #000000;
             color: #FFFFFF;
         }
 
-        FxButton:over {
+        s|Button:over {
             baseColor: #484848;
             fontWeight: "bold";
             color: #FFFFFF;
         }
 
-        FxButton:down {
+        s|Button:down {
             baseColor: #484848;
             fontWeight: "bold";
             color: #FFFF66;
         }
 
-        Box:normal {
+        mx|Box:normal {
 			fontSize: 10;
 		}
 
-		Box:zoomed {
+		mx|Box:zoomed {
 			fontSize: 20;
 			color: #330066;
 		}
@@ -44,13 +47,13 @@
     	    }
     	]]>
     </fx:Script>
-    <FxPanel title="Advanced CSS: Pseudo Selector Example" height="75%" width="75%" >
-        <Label text="The FxButton below uses pseudo selectors to define its baseColor for each of its states."
+    <s:Panel title="Advanced CSS: Pseudo Selector Example" height="75%" width="75%" >
+        <mx:Label text="The Spark Button below uses pseudo selectors to define its baseColor for each of its states."
         	x="10" y="10" />
-        <FxButton id="submitButton" label="Submit Form" x="10" y="35"/>
+        <s:Button id="submitButton" label="Submit Form" x="10" y="35"/>
 
-        <FxButton label="change halo state" click="changeCompState()" x="10" y="65"/>
+        <s:Button label="change halo state" click="changeCompState()" x="10" y="65"/>
         <custom:DateStateComp id="dateComp" currentState="normal" x="10" y="90"/>
 
-    </FxPanel>
-</FxApplication>
+    </s:Panel>
+</s:Application>
