--- a/projects/spark/asdoc/en_US/spark/styles/examples/PseudoSelectorExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/styles/examples/PseudoSelectorExample.mxml
@@ -47,13 +47,14 @@
     	    }
     	]]>
     </fx:Script>
-    <s:Panel title="Advanced CSS: Pseudo Selector Example" height="75%" width="75%" >
-        <mx:Label text="The Spark Button below uses pseudo selectors to define its baseColor for each of its states."
+    <s:Panel title="Advanced CSS: Pseudo Selector Example" height="75%" width="75%"
+        horizontalCenter="0" verticalCenter="0">
+        <s:SimpleText text="The Spark Button below uses pseudo selectors to define its baseColor for each of its states."
         	x="10" y="10" />
         <s:Button id="submitButton" label="Submit Form" x="10" y="35"/>
 
         <s:Button label="change halo state" click="changeCompState()" x="10" y="65"/>
-        <custom:DateStateComp id="dateComp" currentState="normal" x="10" y="90"/>
+        <custom:DateStateComp id="dateComp" currentState="normal" x="140" y="35"/>
 
     </s:Panel>
 </s:Application>
